# src/point/controller/point.controller.js
@@ -1,6 +1,7 @@
 import { StatusCodes } from "http-status-codes";
 import { PointService } from "../service/point.service.js";
 import { TransferPointDto } from "../dto/point.dto.js";
+import { TransactionHistoryDto } from "../dto/point.dto.js";
 import { parseWithBigInt, stringifyWithBigInt } from "../../bigintJson.js";
 
 export const getUserPoint = async(req, res, next) => {
@@ -31,8 +32,6 @@ export const transferPoint = async(req, res, next) => {
   try {
     const userId = BigInt(req.user.userId);
     
-    console.log("userId:", userId);
-
     const dto = new TransferPointDto ({
       requestId: req.body.requestId,
       amount: req.body.amount,
@@ -43,7 +42,24 @@ export const transferPoint = async(req, res, next) => {
     const responseData = parseWithBigInt(stringifyWithBigInt(point));
 
     res.status(StatusCodes.OK).success(responseData);
-  } catch (error) {
-    next(error);
+  } catch (err) {
+    next(err);
+  }
+}
+
+export const getTransactionHistory = async (req, res, next) => {
+  try {
+    const userId = BigInt(req.user.userId);
+    const dto = new TransactionHistoryDto ({
+      userId: userId,
+      requestId: req.query.requestId ? BigInt(req.query.requestId) : null,
+    });
+
+    const transactions = await PointService.getTransactionHistory(dto);
+    const responseData = parseWithBigInt(stringifyWithBigInt(transactions));
+
+    res.status(StatusCodes.OK).success(responseData);
+  } catch (err) {
+    next(err);
   }
 }
